--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -278,7 +278,7 @@ div.body div.tab-layout div.tab-title li.tabMenuLis.on ul.tabMenuUls {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   border: 1px solid rgba(0, 0, 0, 0.15);
   background: #fff;
-  text-shadow: 1px -1px 1px #ffffff;
+  text-shadow: 1px -1px 1px #fff;
   height: auto;
 }
 div.body div.tab-layout div.tab-title li:first-child {
@@ -319,4 +319,8 @@ div.body div.tab-title.s3 li.li3 > span {
   background: rgba(0, 0, 0, 0.7);
   color: rgba(255, 255, 255, 0.8);
   border: none;
+}
+textarea {
+  width: 100%;
+  height: 300px;
 }
